--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.jrvansuita:PickImage:+'
+    implementation 'com.github.TutorialsAndroid:KAlertDialog:v14.0.19'
 }
