--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation 'com.github.TutorialsAndroid:KAlertDialog:v14.0.19'
 
     implementation 'com.github.tapadoo:alerter:7.2.4'
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 }
