--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shiper">
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shiper">
-        <activity android:name=".ThongKe_activity"></activity>
+        <activity android:name=".ThongBao_Activity"></activity>
+        <activity android:name=".ThongKe_activity" />
         <activity android:name=".Lichsugiaohang_Activity" />
         <activity android:name=".LyDo_Activity" />
         <activity android:name=".DanhSachDonHang_Activity" />
